added file structure

--- a/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj
+++ b/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj
@@ -127,7 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="calculations.c" />
+    <ClCompile Include="graph.c" />
     <ClCompile Include="Main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="calculations.h" />
+    <ClInclude Include="graph.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
