added 2 nearestNeighbor algorithm

--- a/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj
+++ b/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj
@@ -127,9 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="algorithms.h" />
     <ClCompile Include="calculations.c" />
+    <ClCompile Include="enhancedNearestNeighbor.c" />
     <ClCompile Include="graph.c" />
     <ClCompile Include="Main.c" />
+    <ClCompile Include="nearestNeighbor.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="calculations.h" />
