--- a/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj
+++ b/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="algorithms.h" />
+    <ClCompile Include="brute_force.c" />
     <ClCompile Include="calculations.c" />
     <ClCompile Include="enhancedNearestNeighbor.c" />
     <ClCompile Include="graph.c" />
