--- a/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj.filters
+++ b/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="brute_force.c">
       <Filter>Source Files\Algorithms</Filter>
     </ClCompile>
+    <ClCompile Include="tspBranchAndBound.c">
+      <Filter>Source Files\Algorithms</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="graph.h">
