--- a/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj
+++ b/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj
@@ -140,6 +140,18 @@
     <ClInclude Include="calculations.h" />
     <ClInclude Include="graph.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="10.txt" />
+    <Text Include="100.txt" />
+    <Text Include="125.txt" />
+    <Text Include="13.txt" />
+    <Text Include="15.txt" />
+    <Text Include="150.txt" />
+    <Text Include="20.txt" />
+    <Text Include="5.txt" />
+    <Text Include="50.txt" />
+    <Text Include="75.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
