--- a/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj
+++ b/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="enhancedNearestNeighbor.c" />
     <ClCompile Include="fileFunc.c" />
     <ClCompile Include="graph.c" />
+    <ClCompile Include="insertion.c" />
     <ClCompile Include="Main.c" />
     <ClCompile Include="nearestNeighbor.c" />
     <ClCompile Include="tspBranchAndBound.c" />
