--- a/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj.filters
+++ b/TravellingSalesmanProblem/TravellingSalesmanProblem.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="insertion.c">
       <Filter>Source Files\Algorithms</Filter>
     </ClCompile>
+    <ClCompile Include="genetic.c">
+      <Filter>Source Files\Algorithms</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="graph.h">
